<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="73dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/text_result"
            android:textSize="36sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/holo_orange_light"
            android:foregroundTint="#FFFFFF"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_plus" />

                <Button
                    android:id="@+id/button_sin"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_sin" />

                <Button
                    android:id="@+id/button_cos"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_cos" />

                <Button
                    android:id="@+id/button_exp"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_exp" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_minus" />

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_7" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_8" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_9" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_multiply"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_multiply" />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_4" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_5" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_6" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_divide"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperation"
                    android:text="@string/button_divide" />

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_1" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_2" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_3" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/design_default_color_error"
                    android:text="@string/button_equal" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:text="@string/button_clear" />

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_0" />

                <Button
                    android:id="@+id/button_comma"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OnClick"
                    android:text="@string/button_comma" />

            </TableRow>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>